--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -16,8 +16,6 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp">
 
-        //its Image view is for view of profile picture
-
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -58,7 +56,8 @@
         android:layout_marginTop="80dp"
         android:layout_marginBottom="-20dp"
         android:background="@color/white"
-        app:cardCornerRadius="20dp">
+        app:cardCornerRadius="20dp"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,8 +106,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-            //its a materai design inout text view for entering the user namr and password of the user
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etxt_designation"
@@ -292,6 +289,40 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="100dp"
+        android:padding="20dp">
+
+
+        <EditText
+            android:id="@+id/etxt_subject"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="subject"/>
+        <EditText
+            android:id="@+id/etxt_designation1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="designation"/>
+        <EditText
+            android:id="@+id/etxt_salary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="salary"/>
+
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="insert"
+            android:background="@color/white"
+            android:id="@+id/btn_insert"/>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
