--- a/app/src/main/res/layout/activity_attendence.xml
+++ b/app/src/main/res/layout/activity_attendence.xml
@@ -205,7 +205,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/crad2"
+        android:id="@+id/card2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="10dp"
@@ -388,8 +388,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
+                android:layout_height="match_parent">
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -531,16 +530,6 @@
                 app:icon="@drawable/ic_format_list_bulleted"
                 app:iconGravity="textStart"
                 app:iconSize="20dp" />
-
-            <TextView
-                android:id="@+id/txt_temp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text=""
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textSize="12sp"
-                android:textColor="#5E5E5E"/>
 
         </RelativeLayout>
 
