--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -32,6 +32,7 @@
             >
 
             <TextView
+                android:id="@+id/temp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Hii Professor.."
@@ -195,7 +196,6 @@
                         android:layout_height="wrap_content" />
 
                 </com.google.android.material.textfield.TextInputLayout>
-
 
                 <Button
                     android:id="@+id/btn_sbmt"
